syntax = "proto3";

package instruments;

import "common.proto";

service InstrumentService {
  rpc GetInstrument (GetInstrumentRequest) returns (GetInstrumentResponse);
  rpc GetInstruments (GetInstrumentsRequest) returns (GetInstrumentsResponse);
}

message GetInstrumentRequest {
  string id = 1;
}

message GetInstrumentResponse {
  common.Instrument instrument = 1;
}

message GetInstrumentsRequest {
  string filter = 1; // Filtering; Supports AIP-160
  string order_by = 2; // Ordering; Supports AIP-132
  int32 page_size = 3; // Paginating; Supports AIP-158
  string page_token = 4; // Conceptually treated as "page x", where x is page number
}

message GetInstrumentsResponse {
  repeated common.Instrument instruments = 1; // Ordered and filtered array of items
  int32 total_count = 2; // Total number of items in database before filter, order and pagination
  string next_page_token = 3; // Next page cursor token as per AIP-158
  int32 total_pages = 4; // Total number of pages generated from given page_size in request
}